--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <!-- HEART CANVAS -->
-  <canvas id="c" style="position:fixed;top:0;left:0;width:100vw;height:100vh;z-index:-1;pointer-events:none;"></canvas>
+  <canvas id="c" style="position:fixed;top:0;left:0;width:100vw;height:100vh;z-index:-1;pointer-events:none;border: 5px solid red;"></canvas>
 
   <nav>
     <div class="nav-container">
