--- a/index.html
+++ b/index.html
@@ -7,7 +7,37 @@
   <title>Jesús Lopez Aguilar - ePortfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  </head>
+
+<body>
+<!-- NAVIGATION -->
+<nav>
+  <div class="nav-container">
+    <ul id="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html" class="active-nav-link">About Me</a></li>
+      <li><a href="courses.html">Courses</a></li>
+      <li><a href="achievements.html">Achievements</a></li>
+      <li><a href="personal-projects.html">Personal Projects</a></li>
+    </ul>
+  </div>
+</nav>
+
+<!-- HAMBURGER MENU -->
+<div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
+  <div></div><div></div><div></div>
+</div>
+
+<div class="mobile-nav" id="mobile-nav">
+  <a href="index.html">Home</a>
+  <a href="about.html" class="link-active-glow">About Me</a>
+  <a href="courses.html">Courses</a>
+  <a href="achievements.html">Achievements</a>
+  <a href="personal-projects.html">Personal Projects</a>
+</div>
+
   <style>
+  
     #hamburger-menu, .mobile-nav, .nav-container {
       position: relative;
       z-index: 999;
