--- a/index.html
+++ b/index.html
@@ -143,17 +143,22 @@
     for (let i = 0; i < v; i++) {
       const f = [], x = R() * O(), y = R() * Q();
       const H = i / v * 80 + 280, S = R() * 40 + 60, B = R() * 60 + 40;
-      for (let k = 0; k < v; k++) {
-        f[k] = {
-          x, y, X: 0, Y: 0,
-          R: (1 - k / v) + 1,
-          S: R() + 1,
-          q: ~~(R() * v),
-          D: i % 2 * 2 - 1,
-          F: R() * .2 + .7,
-          f: `hsla(${~~H},${~~S}%,${~~B}%,0.5)`
-        };
-      }
+    for (let k = 0; k < v; k++) {
+      const colorOptions = [
+        'hsla(120, 100%, 45%, 0.5)', // Green
+        'hsla(0, 0%, 100%, 0.5)',    // White
+        'hsla(0, 100%, 50%, 0.5)'    // Red
+      ];
+      f[k] = {
+        x, y, X: 0, Y: 0,
+        R: (1 - k / v) + 1,
+        S: R() + 1,
+        q: ~~(R() * v),
+        D: i % 2 * 2 - 1,
+        F: R() * .2 + .7,
+        f: colorOptions[~~(R() * colorOptions.length)]
+      };
+    }
       e[i] = f;
     }
 
