--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
     }
 
     function loop() {
-      a.clearRect(0, 0, c.width, c.height);
+      a.fillStyle = "rgba(0, 0, 0, 0.15)"; // Lower alpha = longer streaks
+      a.fillRect(0, 0, c.width, c.height);
       for (let i = v; i--;) {
         const f = e[i], u = f[0], q = h[u.q];
         const D = u.x - q[0], E = u.y - q[1], G = M.sqrt(D * D + E * E);
