--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <nav>
   <div class="nav-container">
     <ul id="nav-links">
+      <img src="images/honors_banner_transparent.png" alt="Jesús Lopez Aguilar SLCC Honors ePortfolio" class="honors-banner"/>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html" class="active-nav-link">About Me</a></li>
       <li><a href="courses.html">Courses</a></li>
