--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   </head>
-
 <body>
+  <!-- Honors Banner (OUTSIDE of nav) -->
+<div class="honors-wrapper">
+  <img src="images/honors_banner.png" alt="Jesús Lopez Aguilar SLCC Honors ePortfolio" class="honors-banner" />
+</div>
 <!-- NAVIGATION -->
 <nav>
   <div class="nav-container">
-      <img src="images/honors_banner.png" alt="Jesús Lopez Aguilar SLCC Honors ePortfolio" class="honors-banner"/>
       <ul id="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html" class="active-nav-link">About Me</a></li>
