--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Honors Banner (OUTSIDE of nav) -->
 <div class="honors-wrapper">
-  <img src="images/honors_banner.PNG" alt="Jesús Lopez Aguilar SLCC Honors ePortfolio" class="honors-banner" />
+  <img src="images/honors_banner.png" alt="Jesús Lopez Aguilar SLCC Honors ePortfolio" class="honors-banner" />
 </div>
 <!-- NAVIGATION -->
 <nav>
