--- a/index.html
+++ b/index.html
@@ -9,23 +9,18 @@
   <link rel="stylesheet" href="css/style.css">
   </head>
 <body>
-  <!-- Honors Banner (OUTSIDE of nav) -->
-<div class="honors-wrapper">
-  <img src="images/honors_banner.png" alt="Jesús Lopez Aguilar SLCC Honors ePortfolio" class="honors-banner" />
-</div>
-<!-- NAVIGATION -->
-<nav>
+  <nav>
   <div class="nav-container">
-      <ul id="nav-links">
+    <img src="images/honors_banner.png" alt="SLCC Honors ePortfolio" class="honors-banner"/>
+    <ul id="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="about.html" class="active-nav-link">About Me</a></li>
+      <li><a href="about.html">About Me</a></li>
       <li><a href="courses.html">Courses</a></li>
       <li><a href="achievements.html">Achievements</a></li>
       <li><a href="personal-projects.html">Personal Projects</a></li>
     </ul>
   </div>
 </nav>
-
 <!-- HAMBURGER MENU -->
 <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
   <div></div><div></div><div></div>
