--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
     });
   });
   </script>
-    const observer = new IntersectionObserver((entries, observer) => {
+  <script>
+  const observer = new IntersectionObserver((entries, observer) => {
       entries.forEach(entry => {
         if (entry.isIntersecting) {
           entry.target.classList.add('is-visible');
