--- a/index.html
+++ b/index.html
@@ -63,39 +63,35 @@
   </footer>
 
   <script>
-  const hamburgerIcon = document.getElementById('hamburger-menu');
-  const mobileNav = document.getElementById('mobile-nav');
-  const body = document.body;
-
   function toggleMenu() {
-    const isActive = mobileNav.classList.contains('active');
-    
+    const mobileNav = document.getElementById('mobile-nav');
+    const hamburgerIcon = document.getElementById('hamburger-menu');
+    const body = document.body;
+
     mobileNav.classList.toggle('active');
     hamburgerIcon.classList.toggle('is-active');
-    body.classList.toggle('no-scroll', !isActive);
+    body.classList.toggle('no-scroll', mobileNav.classList.contains('active'));
   }
+</script>
 
-  // Close mobile nav when any link is clicked
-  document.querySelectorAll('.mobile-nav a').forEach(link => {
-    link.addEventListener('click', () => {
-      mobileNav.classList.remove('active');
-      hamburgerIcon.classList.remove('is-active');
-      body.classList.remove('no-scroll');
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const faders = document.querySelectorAll('.fade-in-section');
+    const appearOptions = { threshold: 0.15 };
+
+    const appearOnScroll = new IntersectionObserver(function (entries, observer) {
+      entries.forEach(entry => {
+        if (!entry.isIntersecting) return;
+        entry.target.classList.add('is-visible');
+        observer.unobserve(entry.target);
+      });
+    }, appearOptions);
+
+    faders.forEach(fader => {
+      appearOnScroll.observe(fader);
     });
   });
-  </script>
-  <script>
-  const observer = new IntersectionObserver((entries, observer) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('is-visible');
-          observer.unobserve(entry.target);
-        }
-      });
-    }, { threshold: 0.1 });
-    document.querySelectorAll('.fade-in-section').forEach(el => observer.observe(el));
-  </script>
-
+</script>
   <script>
     const c = document.getElementById("c");
     const a = c.getContext("2d");
