--- a/index.html
+++ b/index.html
@@ -21,23 +21,34 @@
 </head>
 
 <body>
+<!-- NAVIGATION -->
+<nav>
+  <div class="nav-container">
+    <ul id="nav-links">
+      <img src="images/honors_banner.png" alt="SLCC Honors ePortfolio" class="honors-banner"/>
+      <li><a href="index.html"class="active-nav-link">Home</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="courses.html">Courses</a></li>
+      <li><a href="achievements.html">Achievements</a></li>
+      <li><a href="personal-projects.html">Personal Projects</a></li>
+    </ul>
+  </div>
+</nav>
+
+<!-- HAMBURGER MENU -->
+<div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
+  <div></div><div></div><div></div>
+</div>
+
+<div class="mobile-nav" id="mobile-nav">
+  <a href="index.html" class="link-active-glow">Home</a>
+  <a href="about.html">About Me</a>
+  <a href="courses.html">Courses</a>
+  <a href="achievements.html">Achievements</a>
+  <a href="personal-projects.html">Personal Projects</a>
+</div>
   <canvas id="c"></canvas>
 
-  <nav>
-    <div class="nav-container">
-      <img src="images/honors_banner.png" alt="SLCC Honors ePortfolio" class="honors-banner"/>
-        <ul id="nav-links">
-        <li><a href="index.html" class="active-nav-link">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="courses.html">Courses</a></li>
-        <li><a href="achievements.html">Achievements</a></li>
-        <li><a href="personal-projects.html">Personal Projects</a></li>
-      </ul>
-      <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
-        <div></div><div></div><div></div>
-      </div>
-    </div>
-  </nav>
 
   <div class="mobile-nav" id="mobile-nav">
     <a href="index.html">Home</a>
