--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <style>
+    <style>
+  nav {
+    height: 100px;
+    padding: 0;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: rgba(0, 0, 0, 0.85);
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+  }
+
+  body {
+    padding-top: 100px;
+  }
+
+  .honors-banner {
+    height: 90px;
+    max-height: 100px;
+    width: auto;
+    object-fit: contain;
+    object-position: center;
+    display: block;
+    margin: 0 auto;
+    padding: 0;
+  }
+</style>
     canvas#c {
       position: fixed;
       top: 0;
