--- a/index.html
+++ b/index.html
@@ -9,21 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
   <style>
 
-   nav {
-    height: 100px;
-    padding: 0;
-    flex-direction: column;
-    justify-content: flex-start;
-    background-color: rgba(0, 0, 0, 0.85);
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+  nav { background-color: white; height: 60px; padding: 0 20px; width: 100%; position: fixed; top: 0; left: 0; right: 0; z-index: 1000; display: flex; justify-content: center; align-items: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6); transition: padding 0.3s ease, height 0.3s ease; }
   }
 
   body {
