--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
   <title>Jesús Lopez Aguilar - ePortfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css"> <!-- your main ePortfolio styles -->
+<link rel="stylesheet" href="function-heart.css"> <!-- heart animation styles -->
   <style>
   .honors-banner {
     height: 90px;
