--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
       appearOnScroll.observe(fader);
     });
   });
-</script><div id="obal">
+</script>
+  <div id="obal">
   <canvas id="c"></canvas>
-</div>
-<script src="function-heart.js"></script>
+  <script src="function-heart.js"></script>
 </body>
 </html>
