--- a/index.html
+++ b/index.html
@@ -144,22 +144,17 @@
     for (let i = 0; i < v; i++) {
       const f = [], x = R() * O(), y = R() * Q();
       const H = i / v * 80 + 280, S = R() * 40 + 60, B = R() * 60 + 40;
-    for (let k = 0; k < v; k++) {
-      const colorOptions = [
-        'hsla(120, 100%, 65%, 0.95)', // Green
-        'hsla(0, 0%, 100%, 1)',    // White
-        'hsla(0, 100%, 60%, 0.95)'    // Red
-      ];
-      f[k] = {
-        x, y, X: 0, Y: 0,
-        R: (1 - k / v) + 1,
-        S: R() + 1,
-        q: ~~(R() * v),
-        D: i % 2 * 2 - 1,
-        F: R() * .2 + .7,
-        f: colorOptions[Math.floor(R() * colorOptions.length)]
-      };
-    }
+      for (let k = 0; k < v; k++) {
+        f[k] = {
+          x, y, X: 0, Y: 0,
+          R: (1 - k / v) + 1,
+          S: R() + 1,
+          q: ~~(R() * v),
+          D: i % 2 * 2 - 1,
+          F: R() * .2 + .7,
+          f: `hsla(${~~H},${~~S}%,${~~B}%,0.5)`
+        };
+      }
       e[i] = f;
     }
 
@@ -172,8 +167,7 @@
     }
 
     function loop() {
-      a.fillStyle = "rgba(28, 28, 28, 1)"; // Lower alpha = longer streaks
-      a.fillRect(0, 0, c.width, c.height);
+      a.clearRect(0, 0, c.width, c.height);
       for (let i = v; i--;) {
         const f = e[i], u = f[0], q = h[u.q];
         const D = u.x - q[0], E = u.y - q[1], G = M.sqrt(D * D + E * E);
