--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 <!-- NAVIGATION -->
 <nav>
   <div class="nav-container">
-    <img src="images/honors_banner.png" alt="Jesús Lopez Aguilar SLCC Honors ePortfolio" class="honors-banner"/>
     <ul id="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html" class="active-nav-link">About Me</a></li>
+      <li><a href="index.html" class="active-nav-link">Home</a></li>
+      <li><a href="about.html">About Me</a></li>
       <li><a href="courses.html">Courses</a></li>
       <li><a href="achievements.html">Achievements</a></li>
       <li><a href="personal-projects.html">Personal Projects</a></li>
@@ -30,8 +29,8 @@
 </div>
 
 <div class="mobile-nav" id="mobile-nav">
-  <a href="index.html">Home</a>
-  <a href="about.html" class="link-active-glow">About Me</a>
+  <a href="index.html" class="link-active-glos>Home</a>
+  <a href="about.html">About Me</a>
   <a href="courses.html">Courses</a>
   <a href="achievements.html">Achievements</a>
   <a href="personal-projects.html">Personal Projects</a>
