--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 
 <div class="mobile-nav" id="mobile-nav">
-  <a href="index.html" class="link-active-glos>Home</a>
+  <a href="index.html" class="link-active-glow>Home</a>
   <a href="about.html">About Me</a>
   <a href="courses.html">Courses</a>
   <a href="achievements.html">Achievements</a>
