--- a/personal-projects.html
+++ b/personal-projects.html
@@ -17,7 +17,7 @@
       <li><a href="about.html">About Me</a></li>
       <li><a href="courses.html">Courses</a></li>
       <li><a href="achievements.html">Achievements</a></li>
-      <li><a href="personal_projects.html" class="active-nav-link">Personal Projects</a></li>
+      <li><a href="personal-projects.html" class="active-nav-link">Personal Projects</a></li>
     </ul>
   </div>
 </nav>
