--- a/personal-projects.html
+++ b/personal-projects.html
@@ -31,7 +31,7 @@
   <a href="about.html">About Me</a>
   <a href="courses.html">Courses</a>
   <a href="achievements.html">Achievements</a>
-  <a href="personal-projects.html" class="active-nav-glow">Personal Projects</a>
+  <a href="personal-projects.html" class="link-active-glow">Personal Projects</a>
 </div>
 
 <main class="centered-content-block fade-in-section">
