--- a/personal-projects.html
+++ b/personal-projects.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning Outside of Class – Jesús Lopez Aguilar</title>
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
       <li><a href="about.html">About Me</a></li>
       <li><a href="courses.html">Courses</a></li>
       <li><a href="achievements.html">Achievements</a></li>
-      <li><a href="personal-projects.html" class="active-nav-link">Personal Projects</a></li>
+      <li><a href="personal-projects.html" class="link-active-glow">Personal Projects</a></li>
     </ul>
   </div>
 </nav>
@@ -37,38 +37,47 @@
 <main class="centered-content-block fade-in-section">
   <h1>Learning Outside of Class</h1>
 
-  <h2>Clubs and Campus Activities</h2>
-  <p>I stay involved with SLCC’s student community through two clubs that fuel my academic and career passions:</p>
+  <h2>Clubs & Campus Activities</h2>
+  <p>SLCC has many opportunities for you to get involved with student clubs or attend events outside of class. I’m involved with:</p>
   <ul>
-    <li><strong>Utah Criminology Student Association</strong> – Diving deep into justice systems, law enforcement topics, and networking with fellow future forensic experts.</li>
-    <li><strong>SLCC Student Nurse Organization</strong> – Because being on track for an RN isn’t enough. I like being involved with real-world prep, resource sharing, and supporting my fellow nursing students.</li>
+    <li>Utah Criminology Student Association</li>
+    <li>SLCC Student Nurse Organization</li>
   </ul>
 
   <h2>Hobbies & Talents</h2>
-  <p>Outside of classes, I’ve done the most — and it shows.</p>
-  <ul>
-    <li><strong>Healthcare & Nursing:</strong> CNA certified, dialysis tech experience, pediatric care, senior care — I stay booked and bedside.</li>
-    <li><strong>Gaming & Tech:</strong> Competitive Xbox grinder, obsessed with optimizing systems and frame rates. My hobby taught me teamwork, patience, and how to set up an Ethernet cable without rage-quitting.</li>
-    <li><strong>Manual Driving:</strong> I drive stick. That’s it. Jeep Wranglers, hills, and all. No stall, all skill.</li>
-    <li><strong>Creative Writing:</strong> My humor and storytelling got me through trauma and straight into academic excellence. I don’t just write for grades — I write to survive (and maybe to go viral).</li>
-    <li><strong>Cultural Roots:</strong> Raised in a Mexican household, bilingual with pride. I carry my family’s story with me everywhere — in every paper, every goal, every meal, and every “sí se puede.”</li>
-    <li><strong>CLEP Exams (for fun?!):</strong> I took CLEP tests I didn’t even need because they were paid for. Academic curiosity activated.</li>
-  </ul>
+  <p>Outside of academics, I have many interests that shape who I am and contribute to my personal growth. While majoring in healthcare & criminal justice, I’ve also explored real estate, property management, and earned CLEP exam scores just for fun. These diverse experiences sharpened my work ethic and broadened my skills.</p>
 
-  <h2>Work Experience</h2>
-  <p>I currently work as a healthcare professional, with hands-on experience in dialysis, pediatrics, and senior care. I also work in real estate and property management, helping clients while managing my own schedule. Flexibility, compassion, and multitasking? Yeah, I got those.</p>
+  <h3>Gaming & Technology</h3>
+  <p>I love gaming on Xbox, learning tech setups, and optimizing performance. Gaming taught me patience, teamwork, and problem-solving.</p>
 
-  <h2>Travel & Volunteering</h2>
-  <ul>
-    <li><strong>Travel:</strong> I’ve visited Mexico to connect with family and roots, and I’ve traveled across the U.S. Gaining cultural perspective helps me grow — and helps my future patients feel seen.</li>
-    <li><strong>Volunteer Work:</strong> I’ve helped in medical spaces, mentored students, and supported peers in both real estate and nursing. Mentoring and community engagement keep me grounded while I chase my dreams.</li>
-  </ul>
+  <h3>Healthcare & Nursing</h3>
+  <p>As a nursing student and dialysis tech, I’m constantly learning. Observing clinicals and helping others is something I take pride in.</p>
 
-  <h2>Services I’ve Provided</h2>
+  <h3>Automotive & Driving</h3>
+  <p>I’m a manual transmission nerd. Jeep Wranglers, car mechanics, and the independence of driving are all things I love.</p>
+
+  <h3>Writing & Creativity</h3>
+  <p>Humor, inspiration, and storytelling are my outlets. I write to entertain, motivate, and connect through authentic expression.</p>
+
+  <h3>Cultural Connection & Family</h3>
+  <p>Growing up Mexican shaped my values, drive, and identity. Every goal I pursue is a tribute to my family’s sacrifices and resilience.</p>
+
+  <h2>Work, Travel, Volunteer, & Service</h2>
+
+  <h3>Work Experience</h3>
+  <p>I currently work in healthcare—dialysis, pediatrics, and senior care—and manage real estate/property on the side. I balance both fields while continuing my nursing education.</p>
+
+  <h3>Travel</h3>
+  <p>I’ve traveled both domestically and internationally, especially to Mexico, to connect with my roots. It’s shaped my cultural competence and empathy in healthcare.</p>
+
+  <h3>Volunteer</h3>
+  <p>I volunteer in healthcare settings and mentor students interested in nursing and real estate. I believe in giving back and supporting others' growth.</p>
+
+  <h3>Services I’ve Provided</h3>
   <ul>
-    <li><strong>Mentorship:</strong> For both new real estate agents and aspiring healthcare students.</li>
-    <li><strong>Tutoring:</strong> Nursing and real estate coursework support — I got you.</li>
-    <li><strong>Community Involvement:</strong> Volunteering in healthcare, participating in charity events, and giving back to the communities that raised me.</li>
+    <li><strong>Mentoring:</strong> Real estate and healthcare career advice.</li>
+    <li><strong>Tutoring:</strong> Helping peers succeed in coursework.</li>
+    <li><strong>Community Engagement:</strong> Healthcare volunteer work and charity events.</li>
   </ul>
 
   <div style="text-align: center; margin-top: 40px;">
@@ -88,7 +97,6 @@ function toggleMenu() {
 
   mobileNav.classList.toggle('active');
   hamburgerIcon.classList.toggle('is-active');
-
   if (mobileNav.classList.contains('active')) {
     body.classList.add('no-scroll');
   } else {
